; ModuleID = '/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_clear_lines.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_mode-tree.c_mode_tree_clear_lines.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mode_tree_data = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mode_tree_data*)* @mode_tree_clear_lines to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mode_tree_clear_lines(%struct.mode_tree_data* %0) #0 {
  %2 = alloca %struct.mode_tree_data*, align 8
  store %struct.mode_tree_data* %0, %struct.mode_tree_data** %2, align 8
  %3 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %4 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = call i32 @free(i32* %5)
  %7 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %8 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %7, i32 0, i32 1
  store i32* null, i32** %8, align 8
  %9 = load %struct.mode_tree_data*, %struct.mode_tree_data** %2, align 8
  %10 = getelementptr inbounds %struct.mode_tree_data, %struct.mode_tree_data* %9, i32 0, i32 0
  store i64 0, i64* %10, align 8
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
